# disco

./: .cruft.json  .env.template  .envrc  .gitignore  README.md  flake.nix  pyproject.toml
.github/: dependabot.yml
src/disco/: __init__.py  data.py
tests/: test_module.py
