[tool.poetry]
name = "disco"
version = "0.1.0"
description = ""
authors = [ "Chaz Schlarp <schlarpc@gmail.com>" ]

[tool.poetry.dependencies]
# not automatically used by poetry2nix - https://github.com/nix-community/poetry2nix/issues/570
python = "^3.11"
anthropic = "^0.34.1"
openai = "^1.43.0"
pillow = "^10.4.0"
# https://github.com/elevenlabs/elevenlabs-python/issues/334
elevenlabs = "1.5.0"
gpiozero = "^2.0.1"
pydantic = "^2.8.2"
python-prctl = "^1.8.1"
lgpio = "^0.2.2.0"
av = "^12.3.0"
to-file-like-obj = "^0.0.6"
xdg-base-dirs = "^6.0.1"
numpy = "^2.1.0"
pasimple = "^0.0.3"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
myst-parser = "^4.0.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
Sphinx = "^8.0.2"
sphinx-autoapi = "^3.2.1"
tomli = "^2.0.1"
cruft = {extras = ["pyproject"], version = "^2.15.0"}
poetry = "^1.8.3"

[tool.poetry.scripts]
disco = "disco._cli:main"

[tool.nixpkgs]
dependencies = [ ]
dev-dependencies = [ ]

[tool.black]
line-length = 99

[tool.coverage]
html.directory = "docs/generated/coverage"
report.show_missing = true
run.source_pkgs = [ "disco" ]
run.branch = true
xml.output = "docs/generated/coverage/coverage.xml"

[tool.cruft]
skip = [ ".git", "tests" ]

[tool.isort]
combine_as_imports = true
line_length = 99
profile = "black"
skip_gitignore = true
src_paths = [ "src", "tests" ]

[tool.mypy]
check_untyped_defs = true
files = [ "src", "tests" ]
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report xml"
testpaths = [ "tests" ]

[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"
